<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/HealthIndicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/HealthIndicators"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Weight"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:textSize="18sp"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/inputSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Steps"
        android:inputType="number"
        android:autofillHints=""
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/txtDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/Date2"
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/buttonSaveData2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="#B2B5B6"
        android:text="@string/SaveData2"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>